--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
   overflow: visible;
   justify-content: center;
   align-items: center;
-  animation: backmiss 2s ease-in;
+  animation: backmiss 3s ease-in;
   animation-iteration-count: 1;
   backface-visibility: hidden;
 }
@@ -48,24 +48,16 @@
 @keyframes backmiss {
   0% {
     transform: rotateY(0deg);
-    opacity: 0%;
-  }
-  5% {
-    transform: rotateY(0deg);
     opacity: 100%;
   }
-
   25% {
-    transform: rotateY(90deg);
+    transform: rotateY(0deg);
     opacity: 50%;
   }
+
   50% {
     transform: rotateY(180deg);
-    opacity: 0%;
-  }
-  75% {
-    transform: rotateY(270deg);
-    opacity: 0%;
+    opacity: 25%;
   }
   100% {
     transform: rotateY(360deg);
@@ -82,7 +74,7 @@
   width: 300px;
   height: 500px;
   background-color: rgba(0, 0, 0, 0.2);
-  animation: shadow-movement 1.5s ease-in;
+  animation: shadow-movement 3s ease-in;
   animation-iteration-count: 1;
 }
 @keyframes shadow-movement {
@@ -90,25 +82,18 @@
     transform: rotateY(0deg);
     opacity: 0%;
   }
-  5% {
-    transform: rotateY(0deg);
-    opacity: 75%;
-  }
   25% {
-    transform: rotateY(90deg);
+    transform: rotateY(0deg);
     opacity: 50%;
   }
+
   50% {
     transform: rotateY(180deg);
-    opacity: 50%;
-  }
-  75% {
-    transform: rotateY(270deg);
-    opacity: 25%;
+    opacity: 100%;
   }
   100% {
     transform: rotateY(360deg);
-    opacity: 100%;
+    opacity: 0%;
   }
 }
 
@@ -123,7 +108,7 @@
   width: 300px;
   height: 500px;
   background-color: blue;
-  animation: Namecardcon 1.5s ease-in;
+  animation: Namecardcon 3s ease-in;
   animation-iteration-count: 1;
 }
 
@@ -131,15 +116,17 @@
   0% {
     transform: rotateY(0deg);
     opacity: 0%;
-    display: none;
+    visibility: hidden;
+  }
+  25% {
+    transform: rotateY(90deg);
+    opacity: 25%;
+    visibility: hidden;
   }
   50% {
     transform: rotateY(180deg);
-    opacity: 25%;
-  }
-  75% {
-    transform: rotateY(270deg);
-    opacity: 50%;
+    opacity: 75%;
+    visibility: hidden;
   }
   100% {
     transform: rotateY(360deg);
